# libcopter

./: README.md
dronecontrol/: README.md  comm.py  command.py
examples/cpp_demo/: CMakeLists.txt  README.md  main.cpp
parse_tcpstream/: CMakeLists.txt  Makefile  README.md  decode_streamdump_main.cpp  decode_video.c  decode_video.cpp  decode_video.hpp  parsestream_python_wrapper.cpp  python_test.py  python_wrapper.cpp  sg500.cpp  sg500.hpp  sg500_py.cpp  test_cpp.cpp
reverse_engineering/: README.md  fix_stream.py  mon_on.sh
reverse_engineering/accesspoint/: README.md  command-message.txt  dnsmasq.conf  drone.py  hostapd.conf  setup.sh
